syntax = "proto3";

import "google/protobuf/timestamp.proto";

package userService;

option go_package = ".;userService";

message Session {
    string session = 1;
}

message User {
    string uid = 1;
    string first_name = 2;
    string last_name = 3;
    string password = 4;
    string email = 5;
    string role = 6;
    string avatar = 7;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp updatedAt = 9;
    
}

message RegisterRequest {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string password = 4;
    string role = 5;
    string avatar = 6;
}

message RegisterResponse {
    User user = 1;
}

message FindByEmailRequest {
    string email = 1;
}

message FindByEmailResponse {
    User user = 1;
}

message FindByIDRequest {
    string uid = 1;
}

message FindByIDResponse {
    User user = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string session_id = 2;
}

message GetMeRequest {

}

message GetMeResponse {
    User user = 1;
}

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc FindByEmail(FindByEmailRequest) returns (FindByEmailResponse);
    rpc FindByID(FindByIDRequest) returns (FindByIDResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetMe(GetMeRequest) returns (GetMeResponse);
}